--- a/EmailReadAtachment/App.config
+++ b/EmailReadAtachment/App.config
@@ -3,4 +3,15 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<appSettings>
+		<add key="ImapClient" value="swissmail.swissoil.local"/>
+		<add key="UserClient" value="ruanotv"/>
+		<add key="EmailClient" value="ruanotv@swissoil.com.ec"/>
+		<add key="PasswordClient" value=".$circ6HAVO7"/>
+		<add key="Subject" value="PEDIDOS DE CLIENTES SWISSOIL"/>
+		<add key="ExtensionFile" value=".xls"/>
+		<add key="PathFile" value="C:\\Users\\Adria\\source\\repos\\EmailReadAtachment\\EmailReadAtachment\\archivos\\"/>
+		<add key="SubjectResponseForReceive" value= "Notificacion de archivo recibido"/>
+		<add key="BodyTextForReceive" value= "Archivo recibido, próximamente lo procesaremos."/> 
+	</appSettings>
 </configuration>
