--- a/UnitTestExcel/App.config
+++ b/UnitTestExcel/App.config
@@ -14,6 +14,23 @@
 		<add key="SubjectResponseForReceive" value= "Notificacion de archivo recibido"/>
 		<add key="BodyTextForReceive" value= "Archivo recibido, próximamente lo procesaremos."/>
 
-		<add key="CeldaValorCliente" value="B2" />
+		<add key="CeldaValorProveedor" value="B1" />
+		<add key="celdaValorContactoProveedor" value="B2" />
+		<add key="CeldaValorSucursal" value="B3" />
+		<add key="CeldaValorDireccionEntrega" value="B4" />
+		<add key="CeldaValorOrdenCompra" value="B5" />
+		<add key="CeldaValorClienteSwiss" value="B6" />
+		<add key="CeldaValorEntregarEn" value="D6" />
+
+		<add key="CeldaRangoInicialValores" value="A8" />
+		<add key="ColumnaRangoFinalValores" value="E" />
+		<add key="LimiteMaximoValores" value="200" />
+
+		<add key="ColumnaCodigoCONAUTO" value="A" />
+		<add key="ColumnaCodigoSWISSOIL" value="B" />
+		<add key="ColumnaDescripcionProducto" value="C" />
+		<add key="ColumnaEmpaque" value="D" />
+		<add key="ColumnaCantidad" value="E" /> 
+
 	</appSettings>
 </configuration>
