20221122 carga e insercion AS400

--- a/EmailReadAtachment/EmailReadAtachment.csproj
+++ b/EmailReadAtachment/EmailReadAtachment.csproj
@@ -55,6 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Content Include="DataLayer.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="archivos\" />
