--- a/UnitTestExcel/App.config
+++ b/UnitTestExcel/App.config
@@ -30,7 +30,8 @@
 		<add key="ColumnaCodigoSWISSOIL" value="B" />
 		<add key="ColumnaDescripcionProducto" value="C" />
 		<add key="ColumnaEmpaque" value="D" />
-		<add key="ColumnaCantidad" value="E" /> 
+		<add key="ColumnaCantidad" value="E" />
 
+		<add key="User" value="ruanotv"/>
 	</appSettings>
 </configuration>
