--- a/EmailReadAtachment/App.config
+++ b/EmailReadAtachment/App.config
@@ -14,6 +14,12 @@
 		<add key="SubjectResponseForReceive" value= "Notificacion de archivo recibido"/>
 		<add key="BodyTextForReceive" value= "Archivo recibido, próximamente lo procesaremos."/>
 
+		<add key="SubjectResponseForProcess" value= "Notificacion de archivo procesao"/>
+		<add key="BodyTextForProcess" value= "Archivo procesado"/>
+
+		<add key="SubjectResponseForError" value= "Notificacion de archivo recibido"/>
+		<add key="BodyTextForError" value= "El archivo contiene errores."/>
+		
 		<add key="CeldaValorCliente" value="B2" />
 	</appSettings>
 </configuration>
