--- a/EmailReadAtachment/App.config
+++ b/EmailReadAtachment/App.config
@@ -7,19 +7,38 @@
 		<add key="ImapClient" value="swissmail.swissoil.local"/>
 		<add key="UserClient" value="ruanotv"/>
 		<add key="EmailClient" value="ruanotv@swissoil.com.ec"/>
-		<add key="PasswordClient" value=".$circ6HAVO7"/>
+		<add key="PasswordClient" value="SWI2ecu9"/>
 		<add key="Subject" value="PEDIDOS DE CLIENTES SWISSOIL"/>
 		<add key="ExtensionFile" value=".xls"/>
+		<add key="PathTxtBase" value="C:\\Users\\Adria\\source\\repos\\EmailReadAtachment\\EmailReadAtachment\\local\\baseUid.txt"/>
 		<add key="PathFile" value="C:\\Users\\Adria\\source\\repos\\EmailReadAtachment\\EmailReadAtachment\\archivos\\"/>
 		<add key="SubjectResponseForReceive" value= "Notificacion de archivo recibido"/>
 		<add key="BodyTextForReceive" value= "Archivo recibido, próximamente lo procesaremos."/>
 
-		<add key="SubjectResponseForProcess" value= "Notificacion de archivo procesao"/>
+		<add key="SubjectResponseForProcess" value= "Notificacion de archivo procesado"/>
 		<add key="BodyTextForProcess" value= "Archivo procesado"/>
 
-		<add key="SubjectResponseForError" value= "Notificacion de archivo recibido"/>
+		<add key="SubjectResponseForError" value= "Notificacion de archivo erróneo"/>
 		<add key="BodyTextForError" value= "El archivo contiene errores."/>
 		
-		<add key="CeldaValorCliente" value="B2" />
+		<add key="CeldaValorProveedor" value="B1" />
+		<add key="celdaValorContactoProveedor" value="B2" />
+		<add key="CeldaValorSucursal" value="B3" />
+		<add key="CeldaValorDireccionEntrega" value="B4" />
+		<add key="CeldaValorOrdenCompra" value="B5" />
+		<add key="CeldaValorClienteSwiss" value="B6" />
+		<add key="CeldaValorEntregarEn" value="D6" />
+
+		<add key="CeldaRangoInicialValores" value="A8" />
+		<add key="ColumnaRangoFinalValores" value="E" />
+		<add key="LimiteMaximoValores" value="200" />
+
+		<add key="ColumnaCodigoCONAUTO" value="A" />
+		<add key="ColumnaCodigoSWISSOIL" value="B" />
+		<add key="ColumnaDescripcionProducto" value="C" />
+		<add key="ColumnaEmpaque" value="D" />
+		<add key="ColumnaCantidad" value="E" />
+
+		<add key="User" value="ruanotv"/>
 	</appSettings>
 </configuration>
