--- a/EmailReadAtachment/DataLayer.config
+++ b/EmailReadAtachment/DataLayer.config
@@ -23,7 +23,7 @@
     <add key="MotorOrigen2" value="SQL_SERVER"/>
     <add key="TipoPrueba" value="false"/>
     <add key="UID" value="ruanotv6"/>
-    <add key="PWD" value="Cas9hom5"/>
+    <add key="PWD" value="cas1hom2"/>
 		<add key="VALIDAR_CANTIDADES" value="1"/>
 		<add key="FACTOR_DESVIO" value="0.4"/>
 		<add key="PROCESS01" value="V64MODSJEC"/>
